--- a/views/contact.html
+++ b/views/contact.html
@@ -3,49 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Arya Joshi">
+    <meta name="author" content="Your name">
     <meta name="keywords" content="Carnegie Mellon University, Information Systems">
-    <meta name="description" content="Arya Joshi professional website">
-    <title>Your name</title>
-    <title>Document</title>
+    <meta name="description" content="Your name professional website">
+    <link rel="stylesheet" href="../static/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900&display=swap" rel="stylesheet">
+
+    <title>Arya Joshi</title>
 </head>
-<body style="font-family: Arial;">
+<body>
     <header>
-        <h1>Arya Joshi</h1>
-       
+        <h1 id="webname">Arya Joshi</h1>
         <nav>
-            <a href="../index.html">Home</a> 
-            <a href="cv.html">CV</a>
-            <a href="contact.html">Contact Me</a>
-            <a href="fun.html">For Fun</a>
+            <a href="../index.html" class = "navigation">Home</a>
+            <a href="cv.html" class = "navigation">CV</a>
+            <a href="contact.html" class = "navigation">Contact Me</a>
+            <a href="fun.html" class = "navigation">For Fun</a>
         </nav>
     </header>
-    <div class = "main"> 
-        <h2> Contact Me </h2>
+    <div class="main">
+        <h2>Contact Me</h2>
         <form>
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-            <label for="comment">Comment:</label>
-            <input type="text" name="comment" required>
-            <button type="submit">Submit</button>
+            <label for="name">Your name (required)</label>
+            <input type="text" id="name" required>
+            <label for="email">Your email</label>
+            <input type="email" id="email">
+            <label for="comment">Your comment</label>
+            <textarea id="comment" cols="30" rows="10"></textarea>
+            <input type="submit" value="SEND">
         </form>
         <table>
-            <tr>
-                <th>Method</th>
-                <th>Details</th>
-            </tr>
-            <tr>
-                <td>Email</td>
-                <td>aryaj@andrew.cmu.edu </td>
-            </tr>
-            <tr>
-                <td>Phone</td>
-                <td>+1-609-789-3509</td>
-            </tr>
+            <tr><th>Contact Method</th><th>Description</th></tr>
+            <tr><td>Email</td><td>aryaj@andrew.cmu.edu</td></tr>
+            <tr><td>Phone</td><td>6097893509</td></tr>
         </table>
     </div>
-    <footer> Copyright Arya Joshi 2025</footer>
+    <footer>&copy; 2025 designed by  Arya</footer>
 </body>
 </html>
