--- a/views/cv.html
+++ b/views/cv.html
@@ -3,25 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Arya Joshi">
+    <meta name="author" content="Your name">
     <meta name="keywords" content="Carnegie Mellon University, Information Systems">
-    <meta name="description" content="Arya Joshi professional website">
-    <title>Your name</title>
-    <title>Document</title>
+    <meta name="description" content="Your name professional website">
+    <link rel="stylesheet" href="../static/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900&display=swap" rel="stylesheet">
+
+    <title>Arya Joshi</title>
 </head>
-<body style="font-family: Arial;">
+<body>
     <header>
-        <h1>Arya Joshi</h1>
-       
+        <h1 id="webname">Arya Joshi</h1>
         <nav>
-            <a href="../index.html">Home</a> 
-            <a href="cv.html">CV</a>
-            <a href="contact.html">Contact Me</a>
-            <a href="fun.html">For Fun</a>
+            <a href="../index.html" class = "navigation">Home</a>
+            <a href="cv.html" class = "navigation">CV</a>
+            <a href="contact.html" class = "navigation">Contact Me</a>
+            <a href="fun.html" class = "navigation">For Fun</a>
         </nav>
     </header>
-    <div class = "main"> 
-        <h2> Curriculum Vitae </h2>
+    <div class="main">
+        <h2>Curriculum Vitae</h2>
         <table>
             <tr>
                 <th>Name</th>
@@ -46,9 +49,11 @@
                     Combined Slither API to classify and models to repair vulnerabilities in said contracts. 
                     Fine-tuned Llama-2-7B models, reduced the overall vulnerability count by 97.5 and 96.7 percent respectively</td>
             </tr>
+            <tr></tr>
+            <tr></tr>
         </table>
-    <a href = "../static/resume1.pdf"> View Resume (PDF) </a>
+        <a href="../static/your_resume.pdf" target="_blank">My resume (pdf)</a>
     </div>
-    <footer> Copyright Arya Joshi 2025</footer>
+    <footer>&copy; 2025 designed 🎨 and coded 👩🏻‍💻 by Arya</footer>
 </body>
 </html>
