--- a/views/contact.html
+++ b/views/contact.html
@@ -10,11 +10,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900&display=swap" rel="stylesheet">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="../static/script.js" defer></script>
 
     <title>Arya Joshi</title>
 </head>
-<body>
+<body onload="addYear()">
     <header>
         <h1 id="webname">Arya Joshi</h1>
         <nav>
@@ -26,21 +27,24 @@
     </header>
     <div class="main">
         <h2>Contact Me</h2>
-        <form>
+        <form onsubmit="return validateForm()" novalidate>
             <label for="name">Your name (required)</label>
             <input type="text" id="name" required>
-            <label for="email">Your email</label>
-            <input type="email" id="email">
-            <label for="comment">Your comment</label>
-            <textarea id="comment" cols="30" rows="10"></textarea>
+            
+            <label for="email">Your email (required)</label>
+            <input type="email" id="email" required>
+            
+            <label for="comment">Your comment (required)</label>
+            <textarea id="comment" cols="30" rows="10" required></textarea>
             <input type="submit" value="SEND">
         </form>
+        <div id="validation">PLEASE FILL OUT THE FORM CORRECTLY!!!!!!!!</div>
         <table>
             <tr><th>Contact Method</th><th>Description</th></tr>
             <tr><td>Email</td><td>aryaj@andrew.cmu.edu</td></tr>
             <tr><td>Phone</td><td>6097893509</td></tr>
         </table>
     </div>
-    <footer>&copy; 2025 designed by  Arya</footer>
+    <footer id = "copyYear">&copy; designed 🎨 and coded 👩🏻‍💻 by Arya</footer>
 </body>
 </html>
