--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,16 @@
+.mainLayout {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+
+#item1, #item2, #item3, #item4 {
+    flex: 0 0 48%;
+    box-sizing: border-box;
+}
+
+
 * {
     font-family: 'Roboto', sans-serif;
     font-optical-sizing: auto;
@@ -37,9 +50,9 @@ form * {
     text-align: center;  
 }
 
-#listimus {
+/* #listimus {
     display: none;
-}
+} */
 #full-bio {
     display: none;
 }
@@ -52,3 +65,50 @@ form * {
     display: none;
     color: red; 
     }
+
+.funIMG {
+    width: 300px; 
+    height: 300px;
+    border-radius: 100%; 
+    display: block;
+    margin: auto;
+    }
+    
+iframe {
+display: block;
+margin: auto;
+max-width: 100%;
+border-radius: 30px; 
+    }
+.container {
+    text-align: center;
+    background-color: #f9f9f9;
+    padding: 20px;
+    border-radius: 10%;
+    box-shadow: 0px 10px 12px rgba(0, 0, 0, 0.1);
+    width: 300px;
+    margin: 20px auto;
+}
+
+.adviceBtn {
+    background-color: #48bbc4;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 10px;
+    cursor: pointer;
+
+}
+.map-container {
+    width: 100%;
+    max-width: 700px;
+    height: auto;
+    margin-bottom: 20px;
+}
+
+iframe {
+    width: 100%;
+    max-width: 600px;
+    height: 400px;
+    border-radius: 30px;
+}
